# easytrans-python-sdk

./: .env.example  .gitignore  QUICKSTART.md  README.md  mkdocs.yml  pyproject.toml
EasyTrans Documentation/: api_intermediate.json  openapi.yaml
EasyTrans Documentation/EasyTrans - JSON customer import v2.2/Example JSON data/: EasyTrans - JSON customer import example - extended.json  EasyTrans - JSON customer import example - simple.json
EasyTrans Documentation/EasyTrans - JSON customer import v2.2/Example requests/: EasyTrans - JSON customer import - Guzzle example.php  EasyTrans - JSON customer import - Postman example.postman_collection.json
EasyTrans Documentation/EasyTrans - JSON order import v5.0/Example JSON data/: EasyTrans - JSON order import example - extended.json  EasyTrans - JSON order import example - minimal.json  EasyTrans - JSON order import example - simple with document.json  EasyTrans - JSON order import example - simple.json
EasyTrans Documentation/EasyTrans - JSON order import v5.0/Example requests/: EasyTrans - JSON order import - Guzzle example.php  EasyTrans - JSON order import - Postman example.postman_collection.json
EasyTrans Documentation/EasyTrans - JSON order import v5.0/Example webhook/: EasyTrans - JSON orderstatus webhook example.json
docs/: index.md
docs/api-reference/: client.md  constants.md  exceptions.md  index.md  models.md  rest-models.md
docs/guides/: authentication.md  customers.md  error-handling.md  index.md  orders.md  rest-api.md  webhooks.md
easytrans/: __init__.py  client.py  constants.py  exceptions.py  models.py  rest_models.py
examples/: basic_order.py  django_integration.py
plans/: easytrans-sdk-architecture.md  rest-api-integration.md
scripts/: html_to_intermediate.py  intermediate_to_openapi.py
tests/: __init__.py  conftest.py  test_client.py  test_models.py  test_rest_client.py  test_rest_models.py
tests/integration/: __init__.py  conftest.py  test_customer_extended.py  test_customer_simple.py  test_customer_update.py  test_error_paths.py  test_order_batch.py  test_order_extended.py  test_order_minimal.py  test_order_simple.py  test_order_with_document.py  test_rest_customers.py  test_rest_orders.py  test_rest_reference.py
