[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easytrans-sdk"
version = "1.0.0"
description = "Python SDK for EasyTrans TMS API - A Dutch Transport Management System"
authors = [{name = "EasyTrans SDK Contributors"}]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["easytrans", "tms", "transport", "logistics", "api", "sdk", "shipping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/easytrans-sdk"
Documentation = "https://github.com/yourusername/easytrans-sdk#readme"
Repository = "https://github.com/yourusername/easytrans-sdk"
Issues = "https://github.com/yourusername/easytrans-sdk/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# By default only unit tests run (integration tests require real API credentials).
# Run integration tests explicitly: pytest tests/integration/ -m integration -v
addopts = "-v --cov=easytrans --cov-report=html --cov-report=term-missing -m 'not integration'"
markers = [
    "integration: marks tests as integration tests that require real API credentials (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["easytrans*"]
exclude = ["tests*", "examples*", "plans*", "EasyTrans Documentation*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
